# SUST

./: .gitignore  README.md  pyproject.toml  vercel.json
api/: index.py
app/: __init__.py  analyzer.py  main.py  schemas.py
public/: app.js  index.html  styles.css
tests/: test_analyzer.py
