[project]
name = "queuestorm-investigator"
version = "1.0.0"
description = "FastAPI support-ticket analyzer for the SUST CSE Carnival 2026 preliminary round."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
]

[tool.vercel]
entrypoint = "app.main:app"
